<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="127dp"
                android:layout_height="57dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/button_like_background"
                android:fontFamily="@font/red_hat_text_medium"
                android:text="@string/login"
                android:textColor="@color/white"

                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eTPass" />

            <EditText
                android:id="@+id/eTPass"
                android:layout_width="323dp"
                android:layout_height="65dp"
                android:layout_marginTop="29dp"
                android:background="@drawable/input"
                android:ems="10"
                android:hint="@string/passSignUp"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eTEmail" />

            <TextView
                android:layout_width="223dp"
                android:layout_height="66dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="168dp"
                android:fontFamily="@font/red_hat_text_bold"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="52sp"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnGoToSignUp"
                android:layout_width="127dp"
                android:layout_height="57dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/blue_button_background"
                android:fontFamily="@font/red_hat_text_medium"
                android:text="@string/register"

                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="288dp"
                android:layout_height="81dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:text="@string/loginMessage"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <EditText
                android:id="@+id/eTEmail"
                android:layout_width="323dp"
                android:layout_height="65dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/input"
                android:ems="10"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/emailSignUp"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="182dp"
                android:layout_height="66dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/red_hat_text_bold"
                android:text="@string/login"
                android:textColor="#000000"
                android:textSize="52sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="409dp"
                android:layout_height="89dp"
                android:background="@drawable/input"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:titleMargin="52sp"
                tools:layout_editor_absoluteY="4dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>