<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            >

            <EditText
                android:id="@+id/eTSurname"
                android:layout_width="251dp"
                android:layout_height="57dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/input"
                android:ems="10"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/surnameSignUp"
                android:inputType="textPersonName"
                android:textColorHint="@color/inputHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.417"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eTName" />

            <EditText
                android:id="@+id/eTEmailSignUp"
                android:layout_width="251dp"
                android:layout_height="57dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input"
                android:ems="10"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/emailSignUp"
                android:inputType="textPersonName"
                android:textColorHint="@color/inputHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.417"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eTSurname" />

            <EditText
                android:id="@+id/eTPasswordSignUp"
                android:layout_width="251dp"
                android:layout_height="57dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input"
                android:ems="10"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/passSignUp"
                android:inputType="textPassword"
                android:textColorHint="@color/inputHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.417"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eTEmailSignUp" />

            <EditText
                android:id="@+id/eTConfirmPassword"
                android:layout_width="251dp"
                android:layout_height="57dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/input"
                android:ems="10"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/confirmPass"
                android:inputType="textPassword"
                android:textColorHint="@color/inputHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.417"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eTPasswordSignUp" />

            <EditText
                android:id="@+id/eTName"
                android:layout_width="251dp"
                android:layout_height="57dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input"
                android:ems="10"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/nameSignUp"
                android:inputType="textPersonName"
                android:textColorHint="@color/inputHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.417"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/red_hat_text_semi_bold"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.413"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eTConfirmPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>