<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:nestedScrollingEnabled="false"
    android:overScrollMode="ifContentScrolls"
    tools:context=".fragments.CreateQuestionFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/btnSendNewQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_options"
                android:fontFamily="@font/red_hat_text_medium"
                android:text="@string/SendQuestion"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eTQuestionDescription"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/eTQuestionDescription"
                android:layout_width="300dp"
                android:layout_height="202dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/input"
                android:ems="10"
                android:fontFamily="@font/red_hat_text_regular"
                android:gravity="start|top"
                android:hint="@string/QuestionDescriptionPlaceholder"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eTQuestionTitle" />

            <TextView
                android:id="@+id/eTTitle5"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:fontFamily="@font/red_hat_text_semi_bold"
                android:text="@string/TitleQuestionFragment"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/eTQuestionTitle"
                android:layout_width="294dp"
                android:layout_height="76dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/input"
                android:ems="10"
                android:fontFamily="@font/red_hat_text_regular"
                android:gravity="start|top"
                android:hint="@string/QuestionTitlePlaceholder"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eTTitle5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>